--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "react-story",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/react-story.js",
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
     "test": "jest"
   },
   "devDependencies": {
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -15,7 +16,10 @@
     "eslint": "^4.19.1",
     "flow-bin": "^0.74.0",
     "jest": "^23.1.0",
-    "parcel-bundler": "^1.8.1"
+    "parcel-bundler": "^1.8.1",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.4",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "react": "^16.4.0",
